--- a/Chromi/Base.lproj/Main.storyboard
+++ b/Chromi/Base.lproj/Main.storyboard
@@ -223,7 +223,7 @@
                                                     <imageReference key="image" image="gear" catalog="system" symbolScale="large"/>
                                                 </buttonConfiguration>
                                                 <connections>
-                                                    <segue destination="KGd-Sg-8Wk" kind="presentation" id="tzS-om-u4c"/>
+                                                    <segue destination="j8s-JV-suf" kind="presentation" id="tzS-om-u4c"/>
                                                 </connections>
                                             </button>
                                         </barButtonItem>
@@ -433,7 +433,7 @@
                                     <imageReference key="image" image="gear" catalog="system" symbolScale="large"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <segue destination="KGd-Sg-8Wk" kind="presentation" id="fcB-Se-Gnd"/>
+                                    <segue destination="j8s-JV-suf" kind="presentation" id="fcB-Se-Gnd"/>
                                 </connections>
                             </button>
                         </barButtonItem>
@@ -453,7 +453,7 @@
             </objects>
             <point key="canvasLocation" x="1900" y="191"/>
         </scene>
-        <!--Settings View Controller-->
+        <!--Settings-->
         <scene sceneID="Kab-mz-oAa">
             <objects>
                 <viewController id="KGd-Sg-8Wk" customClass="SettingsViewController" customModule="Chromi" customModuleProvider="target" sceneMemberID="viewController">
@@ -461,24 +461,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" largeTitles="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sQE-h2-nFE">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="108"/>
-                                <items>
-                                    <navigationItem title="Settings" largeTitleDisplayMode="always" id="no7-HI-gWY">
-                                        <barButtonItem key="leftBarButtonItem" id="xyr-rz-8pO">
-                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="KzM-aL-Cuy">
-                                                <rect key="frame" x="16" y="6" width="83" height="44"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" image="chevron.left" catalog="system" title="Back"/>
-                                                <connections>
-                                                    <action selector="back:" destination="KGd-Sg-8Wk" eventType="touchUpInside" id="18j-Zt-qw4"/>
-                                                </connections>
-                                            </button>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DkM-bn-jJj">
                                 <rect key="frame" x="163" y="209" width="49" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -505,20 +487,29 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="VWD-z8-aNV"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="sQE-h2-nFE" firstAttribute="leading" secondItem="VWD-z8-aNV" secondAttribute="leading" id="6bS-VM-dN7"/>
-                            <constraint firstItem="sQE-h2-nFE" firstAttribute="top" secondItem="ZxW-Ef-Jid" secondAttribute="top" id="9Hz-Aa-B1N"/>
-                            <constraint firstItem="sQE-h2-nFE" firstAttribute="trailing" secondItem="VWD-z8-aNV" secondAttribute="trailing" id="gVL-PH-buu"/>
-                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Settings" id="QKG-yF-eMw">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="VDC-uS-4my">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="XVZ-sp-09J">
+                                <rect key="frame" x="16" y="10.666666666666664" width="87" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="chevron.left" catalog="system" title="Back"/>
+                                <connections>
+                                    <action selector="back:" destination="KGd-Sg-8Wk" eventType="touchUpInside" id="aqM-j1-Bkx"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
+                        <outlet property="backButton" destination="XVZ-sp-09J" id="jkl-sf-1H8"/>
                         <outlet property="superView" destination="ZxW-Ef-Jid" id="38M-QZ-r5b"/>
                         <outlet property="useDecimalsSwitch" destination="DkM-bn-jJj" id="xXk-VC-aGo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iW1-vh-uis" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3053.5999999999999" y="212.80788177339903"/>
+            <point key="canvasLocation" x="3979.3893129770991" y="212.67605633802819"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="AD9-wM-OMS">
@@ -687,7 +678,7 @@
                                     <imageReference key="image" image="gear" catalog="system" symbolScale="large"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <segue destination="KGd-Sg-8Wk" kind="presentation" id="QZC-IO-pG7"/>
+                                    <segue destination="j8s-JV-suf" kind="presentation" id="QZC-IO-pG7"/>
                                 </connections>
                             </button>
                         </barButtonItem>
@@ -754,6 +745,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dgZ-RN-6Ql" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="111" y="924"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="H2X-Hp-Hov">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="j8s-JV-suf" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="Ynq-l4-FRY">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="108"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="KGd-Sg-8Wk" kind="relationship" relationship="rootViewController" id="tV4-5z-FMK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="K0P-OR-MpO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3052.6717557251909" y="212.67605633802819"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
