--- a/Chromi/Base.lproj/Main.storyboard
+++ b/Chromi/Base.lproj/Main.storyboard
@@ -568,6 +568,9 @@
                                             <segment title="Gels"/>
                                             <segment title="Pantone"/>
                                         </segments>
+                                        <connections>
+                                            <action selector="typeChanged:" destination="76K-EL-vyg" eventType="valueChanged" id="cF3-aF-TM9"/>
+                                        </connections>
                                     </segmentedControl>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" delaysContentTouches="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="65" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="a9i-HT-RRz">
                                         <rect key="frame" x="0.0" y="51" width="350" height="399"/>
