--- a/Chromi/LaunchScreen.storyboard
+++ b/Chromi/LaunchScreen.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -28,6 +27,7 @@
                                             <constraint firstAttribute="height" constant="50" id="iL6-xH-TXv"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -38,7 +38,7 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="fW3-Mp-tVn" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Tqe-hc-bAt"/>
                             <constraint firstItem="fW3-Mp-tVn" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="oem-yW-UJg"/>
@@ -52,8 +52,5 @@
     </scenes>
     <resources>
         <image name="Chromi" width="1710" height="1600"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
